OpenClaw_Serverless/templates/namespace-local_proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-interceptor
  namespace: openclaw
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
